@@ -3,6 +3,8 @@ examples/create_and_print_value_globecoordinate.pl
 examples/create_and_print_value_item.pl
 examples/create_and_print_value_monolingual.pl
 examples/create_and_print_value_property.pl
+examples/create_and_print_value_quantity.pl
+examples/create_and_print_value_quantity_translated.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
