@@ -52,3 +52,122 @@ sub print {
 1;
 
 __END__
+
+=pod
+
+=encoding utf8
+
+=head1 NAME
+
+Wikibase::Datatype::Print::Value::Quantity - Wikibase quantity value pretty print helpers.
+
+=head1 SYNOPSIS
+
+ use Wikibase::Datatype::Print::Value::Quantity qw(print);
+
+ my $pretty_print_string = print($obj, $opts_hr);
+
+=head1 SUBROUTINES
+
+=head2 C<print>
+
+ my $pretty_print_string = print($obj, $opts_hr);
+
+Construct pretty print output for L<Wikibase::Datatype::Value::Quantity>
+object.
+
+Returns string.
+
+=head1 ERRORS
+
+ print():
+         Object isn't 'Wikibase::Datatype::Value::Quantity'.
+         Option 'cb' must be a instance of Wikibase::Cache::Backend.
+
+=head1 EXAMPLE1
+
+=for comment filename=create_and_print_value_quantity.pl
+
+ use strict;
+ use warnings;
+
+ use Wikibase::Datatype::Print::Value::Quantity;
+ use Wikibase::Datatype::Value::Quantity;
+
+ # Object.
+ my $obj = Wikibase::Datatype::Value::Quantity->new(
+         'unit' => 'Q190900',
+         'value' => 10,
+ );
+
+ # Print.
+ print Wikibase::Datatype::Print::Value::Quantity::print($obj)."\n";
+
+ # Output:
+ # 10 (Q190900)
+
+=head1 EXAMPLE2
+
+=for comment filename=create_and_print_value_quantity_translated.pl
+
+ use strict;
+ use warnings;
+
+ use Wikibase::Cache::Backend::Basic;
+ use Wikibase::Datatype::Print::Value::Quantity;
+ use Wikibase::Datatype::Value::Quantity;
+
+ # Object.
+ my $obj = Wikibase::Datatype::Value::Quantity->new(
+         'unit' => 'Q11573',
+         'value' => 10,
+ );
+
+ # Cache object.
+ my $cache = Wikibase::Cache::Backend::Basic->new;
+
+ # Print.
+ print Wikibase::Datatype::Print::Value::Quantity::print($obj, {
+         'cb' => $cache,
+ })."\n";
+
+ # Output:
+ # 10 (metre)
+
+=head1 DEPENDENCIES
+
+L<Error::Pure>,
+L<Exporter>,
+L<Readonly>.
+
+=head1 SEE ALSO
+
+=over
+
+=item L<Wikibase::Datatype::Value::Quantity>
+
+Wikibase quantity value datatype.
+
+=back
+
+=head1 REPOSITORY
+
+L<https://github.com/michal-josef-spacek/Wikibase-Datatype-Print>
+
+=head1 AUTHOR
+
+Michal Josef Špaček L<mailto:skim@cpan.org>
+
+L<http://skim.cz>
+
+=head1 LICENSE AND COPYRIGHT
+
+© 2020-2023 Michal Josef Špaček
+
+BSD 2-Clause License
+
+=head1 VERSION
+
+0.04
+
+=cut
