@@ -1,4 +1,5 @@
 0.04
+ - Add doc for Wikibase::Datatype::Print::Value::Quantity.
  - Fix default options in Wikibase::Datatype::Print::Value::Quantity.
 
 0.03 2023-04-10T23:11:35+02:00
